--- a/src/tribe.html
+++ b/src/tribe.html
@@ -49,53 +49,7 @@
       ></iframe
     ></noscript>
 
-    <header id="masthead">
-      <div class="container">
-        <div class="row d-flex justify-content-between">
-          <a href="index.html" class="col-10 col-lg-4 d-block"
-            ><img
-              src="img/logo-conan.svg"
-              class="header-logo"
-              alt="Conan C++ Package Manager"
-          /></a>
-
-          <div
-            class="col-2 d-flex d-lg-none align-items-center justify-content-end"
-          >
-            <button
-              class="d-block d-lg-none hamburger hamburger--collapse text-right"
-              type="button"
-            >
-              <span class="hamburger-box"
-                ><span class="hamburger-inner"></span
-              ></span>
-            </button>
-          </div>
-          <div
-            class="col-lg-6 text-right d-flex align-items-center justify-content-end"
-          >
-            <nav class="header-nav align-items-center d-lg-flex" id="headerNav">
-              <a href="https://conan.io/center/" class="btn bg-blue white">
-                <img src="img/small-search.svg" alt="Search">
-                Conan-Center
-              </a>
-              <a href="faq.html" class="btn bg-bright-gray black">
-                FAQ
-              </a>
-              <a href="https://docs.conan.io/" class="btn bg-bright-gray black">
-                  Docs
-              </a>
-              <a href="https://blog.conan.io/" class="btn bg-bright-gray black">
-                  Blog
-              </a>
-              <a href="https://github.com/conan-io/conan" rel="nofollow noopener noreferrer" target="_blank" class="btn bg-bright-gray">
-                  <img src="img/small-github.svg" alt="Github">
-              </a>
-            </nav>
-          </div>
-        </div>
-      </div>
-    </header>
+    @@include('./templates/header.html')
     
     <!-- TRIBES HERO -->
     <section id="tribrsHero" class="py-5 tribes-hero bg-blue bg-cover bg-center">
@@ -174,97 +128,7 @@
       </div>
     </section>
 
-    <footer id="siteFooter" class="py-5 bg-bright-gray">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <ul
-              class="socials d-flex mt-1 mb-0 pt-2 pl-0 justify-content-center list-unstyled"
-            >
-              <li>
-                <a class="mr-2" href="https://twitter.com/conan_io"
-                  ><img class="lazy" src="img/social/twitter.svg" alt="twitter"
-                /></a>
-              </li>
-              <li>
-                <a class="mr-2" href="https://facebook.com/conan.io"
-                  ><img
-                    class="lazy"
-                    src="img/social/facebook.svg"
-                    alt="facebook"
-                /></a>
-              </li>
-              <li>
-                <a class="mr-2" href="https://cpplang.​slack.​com/?id=conan"
-                  ><img class="lazy" src="img/social/slack.svg" alt="slack"
-                /></a>
-              </li>
-              <li>
-                <a class="mr-2" href="https://github.com/conan-io"
-                  ><img class="lazy" src="img/social/github.svg" alt="github"
-                /></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-md-5 footer-left d-md-flex d-none align-items-center">
-            <div class="footer-menu w-100">
-              <div class="row">
-                <div class="col-sm-3">
-                  <h4 class="blue mb-1">GET</h4>
-                  <ul>
-                    <li>
-                      <a href="downloads.html" id="download_btn_bottom"
-                        >Download
-                      </a>
-                    </li>
-                    <li>
-                      <a href="https://conan.io/center/">Conan-Center </a>
-                    </li>
-                    <li>
-                      <a href="https://github.com/conan-io/conan" rel="nofollow"
-                        >GitHub
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-sm-3">
-                  <h4 class="blue mb-1">Resources</h4>
-                  <ul>
-                    <li><a href="https://docs.conan.io/" rel="noopener">Docs </a></li>
-                    <li><a href="https://blog.conan.io/" rel="noopener">Blog </a></li>
-                  </ul>
-                </div>
-                <div class="col-sm-3">
-                  <h4 class="blue mb-1">Legal</h4>
-                  <ul>
-                    <li><a href="privacy-policy.html">Privacy Policy </a></li>
-                    <li><a href="terms-conditions.html">Terms </a></li>
-                    <li><a href="#" class="ot-sdk-show-settings"></a></li>
-                  </ul>
-                </div>
-                <div class="col-sm-3">
-                  <h4 class="blue mb-1">Social</h4>
-                  <ul>
-                    <li><a href="https://github.com/conan-io" rel="noopener noreferrer" taget="_blank">Github </a></li>
-                    <li><a href="https://twitter.com/conan_io" rel="noopener noreferrer" taget="_blank">Twitter </a></li>
-                    <li>
-                      <a href="https://facebook.com/conan.io" rel="noopener noreferrer" taget="_blank">Facebook </a>
-                    </li> 
-                    <li>
-                      <a href="https://cpplang.​slack.​com/?id=conan"
-                        >Slack #conan
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
+    @@include('./templates/footer.html', {"noJS": false})
 
     <!-- Modal -->
     <div class="modal fade" id="conanTribeMemberModal" tabindex="-1" role="dialog" aria-labelledby="conanTribeMemberModalTitle" aria-hidden="true">
