--- a/src/user-stories/rti.html
+++ b/src/user-stories/rti.html
@@ -1,119 +1,1 @@
-<!DOCTYPE html> 
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
-  <meta
-    name="title"
-    content="User Stories"
-  >
-  <meta
-    name="description"
-    content="User Stories Description" 
-  >
-  <link href="favicon.png" rel="shortcut icon" type="image/png" />
-  <link href="https://conan.io/user-stories.html" hreflang="en" rel="alternate" />
-  <title>Conan | User Stories</title>
-
-  <link rel="canonical" href="https://conan.io/user-stories.html" />
-
-  <link rel="stylesheet" href="css/all.css">
-
-  <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'dataLayer', 'GTM-WK44ZFM');</script>
-
-</head>
-
-<body class="user-stories"> <noscript> <iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WK44ZFM"
-      style="display:none;visibility:hidden" width="0"></iframe> </noscript>
-  
-  @@include('./templates/header.html')
-
-  <section class="user-story py-2">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-9 left">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda incidunt, eveniet quidem quos voluptate porro, aliquid pariatur ipsam perferendis veritatis temporibus officiis cum, sequi animi blanditiis adipisci ex ipsa doloribus?
-        </div>
-        <div class="col-md-3 right">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor libero nulla, dolore ex eligendi quaerat maxime beatae doloribus doloremque sequi provident facilis? Eos fugiat reiciendis blanditiis, nulla nemo eius? Earum?
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="sign-up py-5 bg-blue white text-center" id="signUp">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="h2 white d-flex justify-content-center" id="signUpTitle">
-            <div class="position-relative"><img alt="Sign Up" class="position-absolute letter lazy"
-                data-src="img/letter.svg"></div> <span>SIGN ME UP FOR RELEASE UPDATES</span>
-          </div>
-          <div class="mktoFormWrapper">
-            <script src="https://leap.jfrog.com/js/forms2/js/forms2.min.js"></script>
-            <div class="d-flex justify-content-center pt-3">
-              <form class="text-center" id="mktoForm_1479"></form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  @@include('./templates/footer.html', {"noJS": false})
-
-  <div
-    id="openSourceSubscribeModal"
-    class="modal px-2 fade"
-    aria-hidden="true"
-    aria-labelledby="modalSuccessTitleFH"
-    role="dialog"
-    tabindex="-1"
-  >
-      <div class="modal-dialog" role="document">
-          <div class="modal-content">
-              <div class="modal-body p-0 position-relative">
-                  <button type="button" class="close position-absolute" data-dismiss="modal" aria-label="Close">
-                    X
-                  </button>
-                  <div class="splitter d-flex h-100 flex-wrap">
-                      <!-- LEFT -->
-                      <div class="left d-flex justify-content-center align-items-center text-center p-3">
-                          <div>
-                              <p class="top text-white">
-                                <strong> Thank You For Downloading </strong>
-                              </p>
-                              <p class="top text-white">
-                                Your download should <br> begin immediately.
-                              </p>
-                          </div>
-                      </div>
-                      <!-- RIGHT -->
-                      <div class="right d-flex justify-content-center text-center text-lg-left align-items-center p-4">
-                          <div class="mx-auto">
-                              <h2 id="modalSuccessTitleFH">Stay Up to Date</h2>
-                              <p class="open-sans">
-                                Sign up for product updates and new features.
-                              </p>
-                              
-                              <div class="os-form">
-                                <form id="mktoForm_3511"></form>
-                                <p id="subscribeSuccess" class="black bold mb-0"></p> 
-                              </div>
-
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-
-  <script src="js/all.js"></script>
-
-  
-
-</body>
-
-</html>
+@@include('./../templates/single-user-story-page.html')
