MAR-3350 add user stories archive and single. add templates functionality

--- a/src/user-stories/rti.html
+++ b/src/user-stories/rti.html
@@ -1,1 +1,1 @@
-@@include('./../templates/single-user-story-page.html')
+@@loop('../templates/single-user-story-page.html', '../data/user-stories/rti.json') 
