MAR-3350-user-story

--- a/src/index.html
+++ b/src/index.html
@@ -271,7 +271,11 @@
 </section>
 
 <!-- SIGN UP -->
-<section class="sign-up py-5 bg-blue white text-center" id="signUp">
+<section
+  id="signUp"
+  class="sign-up py-5 bg-blue white text-center"
+  style="background: linear-gradient(265.35deg, #2C4257 51.72%, #7BA7D3 98.82%);"
+>
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -291,6 +295,31 @@
                 </div>
 
             </div>
+        </div>
+    </div>
+</section>
+
+
+<section
+  id="userStoriesHomeSection"
+  class="py-5 bg-blue text-white position-relative"
+>
+    <img
+      class="position-absolute dots-background"
+      alt="decoration"
+      src="/img/user-stories/section-background-dots.svg"
+    >
+    <div class="container py-5 text-center position-relative">
+        <div class="content mx-auto">
+            <h2 class="pb-2 text-uppercase">
+                User Stories
+            </h2>
+            <p class="mx-auto pb-4">
+                There are hundreds of companies using Conan successfully to build their products. Read&nbsp;more about some of the problem they are solving, and how Conan is helping them.
+            </p>
+            <a href="/user-stories.html" class="big-btn bg-dark-blue white" rel="noopener">
+                Read More
+            </a>
         </div>
     </div>
 </section>
