--- a/src/index.html
+++ b/src/index.html
@@ -39,61 +39,7 @@
                   style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
-<!-- HEADER -->
-<header id="masthead">
-    <div class="container">
-        <div class="row d-flex justify-content-between">
-
-            <!-- LOGO -->
-            <a href="index.html" class="col-10 col-lg-4 d-block">
-                <img src="img/logo-conan.svg" class="header-logo" alt="Conan C++ Package Manager">
-            </a>
-
-            <!-- HAMBURGER -->
-            <div class="col-2 d-flex d-lg-none align-items-center justify-content-end">
-                <button class="d-block d-lg-none hamburger hamburger--collapse text-right" type="button">
-                        <span class="hamburger-box">
-                            <span class="hamburger-inner"></span>
-                        </span>
-                </button>
-            </div>
-
-            <div class="col-lg-6 text-right d-flex align-items-center justify-content-end">
-                <!-- HEADER NAV -->
-                <nav class="header-nav align-items-center d-lg-flex" id="headerNav">
-                    
-                    <!-- TODO commented search bar for now -->
-                    <!-- <div class="autocomplete show-lg-and-up" style="width:300px;">
-                        <input id="searchInput" type="text" name="search" placeholder="Search ConanCenter" class="p-1 px-3">
-                    </div> -->
-
-                    <a href="https://conan.io/center/" class="btn bg-blue white">
-                        <img src="img/small-search.svg" alt="Search">
-                        Conan-Center
-                    </a>
-                    <a href="https://conan.io/center/" class="btn bg-blue white show-md-and-down">
-                        <img src="img/small-search.svg" alt="Search">
-                        Conan-Center
-                    </a>
-                    <a href="faq.html" class="btn bg-bright-gray black">
-                        FAQ
-                    </a>
-                    <a href="https://docs.conan.io/" class="btn bg-bright-gray black">
-                        Docs
-                    </a>
-                    <a href="https://blog.conan.io/" class="btn bg-bright-gray black">
-                        Blog
-                    </a>
-                    <a href="https://github.com/conan-io/conan" rel="nofollow noopener noreferrer" target="_blank" class="btn bg-bright-gray">
-                        <img src="img/small-github.svg" alt="Github">
-                    </a>
-                </nav>
-
-            </div>
-
-        </div>
-    </div>
-</header>
+@@include('./templates/header.html')
 
 <!-- HERO -->
 <section id="hero" class="blue-gradient-bg position-relative">
@@ -325,7 +271,11 @@
 </section>
 
 <!-- SIGN UP -->
-<section class="sign-up py-5 bg-blue white text-center" id="signUp">
+<section
+  id="signUp"
+  class="sign-up py-5 bg-blue white text-center"
+  style="background: linear-gradient(265.35deg, #2C4257 51.72%, #7BA7D3 98.82%);"
+>
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -345,6 +295,31 @@
                 </div>
 
             </div>
+        </div>
+    </div>
+</section>
+
+
+<section
+  id="userStoriesHomeSection"
+  class="py-5 bg-blue text-white position-relative"
+>
+    <img
+      class="position-absolute dots-background"
+      alt="decoration"
+      src="/img/user-stories/section-background-dots.svg"
+    >
+    <div class="container py-5 text-center position-relative">
+        <div class="content mx-auto">
+            <h2 class="pb-2 text-uppercase">
+                User Stories
+            </h2>
+            <p class="mx-auto pb-4">
+                There are hundreds of companies using Conan successfully to build their products. Read&nbsp;more about some of the problem they are solving, and how Conan is helping them.
+            </p>
+            <a href="/user-stories.html" class="big-btn bg-dark-blue white" rel="noopener">
+                Read More
+            </a>
         </div>
     </div>
 </section>
@@ -791,106 +766,7 @@
     </div>
 </section>
 
-<!-- FOOTER -->
-<footer id="siteFooter" class="py-5 bg-bright-gray">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <ul class="socials d-flex mt-1 mb-0 pt-2 pl-0 justify-content-center list-unstyled">
-                    <!-- TWITTER -->
-                    <li>
-                        <a class="mr-2" href="https://twitter.com/conan_io">
-                            <img class="lazy" data-src="img/social/twitter.svg" alt="twitter">
-                        </a>
-                    </li>
-                    <!-- FACEBOOK -->
-                    <li>
-                        <a class="mr-2" href="https://facebook.com/conan.io">
-                            <img class="lazy" data-src="img/social/facebook.svg" alt="facebook">
-                        </a>
-                    </li>
-                    <!-- SLACK -->
-                    <li>
-                        <a class="mr-2" href="https://cpplang.​slack.​com/?id=conan">
-                            <img class="lazy" data-src="img/social/slack.svg" alt="slack">
-                        </a>
-                    </li>
-                    <!-- GITHUB -->
-                    <li>
-                        <a class="mr-2" href="https://github.com/conan-io">
-                            <img class="lazy" data-src="img/social/github.svg" alt="github">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-md-5 footer-left d-md-flex d-none align-items-center">
-                <div class="footer-menu w-100">
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <h4 class="blue mb-1">GET</h4>
-                            <ul>
-                                <li><a href="downloads.html" id="download_btn_bottom">
-                                    Download
-                                </a></li>
-                                <li><a href="https://conan.io/center/">
-                                    Conan-Center
-                                </a></li>
-                                <li><a href="https://github.com/conan-io/conan" rel="nofollow noopener noreferrer" target="_blank">
-                                    GitHub
-                                </a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-3">
-                            <h4 class="blue mb-1">Resources</h4>
-                            <ul>
-                                <li><a href="https://docs.conan.io/" rel="noopener">
-                                    Docs
-                                </a></li>
-                                <li><a href="https://blog.conan.io/" rel="noopener">
-                                    Blog
-                                </a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-3">
-                            <h4 class="blue mb-1">Legal</h4>
-                            <ul>
-                                <li><a href="privacy-policy.html">
-                                    Privacy Policy
-                                </a></li>
-                                <li><a href="terms-conditions.html">
-                                    Terms
-                                </a></li>
-                                <li><a href="#" class="ot-sdk-show-settings"></a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-3">
-                            <h4 class="blue mb-1">Social</h4>
-                            <ul>
-                                <li><a href="https://github.com/conan-io" rel="noopener noreferrer" taget="_blank">
-                                    Github
-                                </a></li>
-                                <li><a href="https://twitter.com/conan_io" rel="noopener noreferrer" taget="_blank">
-                                    Twitter
-                                </a></li>
-                                <li><a href="https://facebook.com/conan.io" rel="noopener noreferrer" taget="_blank">
-                                    Facebook
-                                </a></li>
-                                <li><a href="https://cpplang.​slack.​com/?id=conan" rel="noopener noreferrer" taget="_blank">
-                                    Slack #conan
-                                </a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-    </div>
-</footer>
-
+@@include('./templates/footer.html', {"noJS": false})
 
 <!-- JS -->
 <script src="js/all.js"></script>
