Update cloud tier link to Community page

--- a/src/downloads.html
+++ b/src/downloads.html
@@ -146,7 +146,7 @@
                     <span class="d-none mx-2 d-md-inline-block">or</span>
 
                     <a 
-                      href="https://jfrog.com/artifactory/start-free/?isConan=true" 
+                      href="https://jfrog.com/community/start-free/" 
                       class="ncta bg-green d-block mt-2 mt-md-0 fcv-cta position-relative"
                       target="_blank" rel="noopener">
                       <span class="w-100 h-100 d-flex align-items-center justify-content-center h-100">
