--- a/src/faq.html
+++ b/src/faq.html
@@ -126,17 +126,22 @@
 
 </head>
 
-<body class="faq"> <noscript> <iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WK44ZFM"
-      style="display:none;visibility:hidden" width="0"></iframe> </noscript>
-  
+<body class="faq">
+
+<noscript> <iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WK44ZFM"
+      style="display:none;visibility:hidden" width="0"></iframe>
+</noscript>
+
+
+
   @@include('./templates/header.html')
 
-  <section id="faqHero" class="blue-gradient-bg position-relative sub-page-hero">
+  <section id="faqHero" class="position-relative sub-page-hero">
     <div class="container py-3 py-md-5">
         <div class="row">
             <div class="col-12 text-center">
                 <div class="hero-content py-3">
-                    <h1 class="white py-4">
+                    <h1 class="black py-4">
                       Frequently Asked Questions
                     </h1>
                 </div>
@@ -182,24 +187,6 @@
     </div>
   </section>
 
-  <section class="sign-up py-5 bg-blue white text-center" id="signUp">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="h2 white d-flex justify-content-center" id="signUpTitle">
-            <div class="position-relative"><img alt="Sign Up" class="position-absolute letter lazy"
-                data-src="img/letter.svg"></div> <span>SIGN ME UP FOR RELEASE UPDATES</span>
-          </div>
-          <div class="mktoFormWrapper">
-            <script src="https://leap.jfrog.com/js/forms2/js/forms2.min.js"></script>
-            <div class="d-flex justify-content-center pt-3">
-              <form class="text-center" id="mktoForm_1479"></form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   @@include('./templates/footer.html', {"noJS": false})
 
