--- a/src/user-stories.html
+++ b/src/user-stories.html
@@ -24,8 +24,10 @@
 
 </head>
 
-<body class="user-stories"> <noscript> <iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WK44ZFM"
-      style="display:none;visibility:hidden" width="0"></iframe> </noscript>
+<body class="user-stories">
+<noscript> <iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WK44ZFM"
+      style="display:none;visibility:hidden" width="0"></iframe>
+</noscript>
   
   @@include('./templates/header.html')
 
@@ -41,24 +43,7 @@
     </div> 
   </section>
 
-  <section class="sign-up py-5 bg-blue white text-center" id="signUp">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="h2 white d-flex justify-content-center" id="signUpTitle">
-            <div class="position-relative"><img alt="Sign Up" class="position-absolute letter lazy"
-                data-src="img/letter.svg"></div> <span>SIGN ME UP FOR RELEASE UPDATES</span>
-          </div>
-          <div class="mktoFormWrapper">
-            <script src="https://leap.jfrog.com/js/forms2/js/forms2.min.js"></script>
-            <div class="d-flex justify-content-center pt-3">
-              <form class="text-center" id="mktoForm_1479"></form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+
 
   @@include('./templates/footer.html', {"noJS": false})
 
