More fixes, 1 remaining

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 
 <!-- HERO -->
 <section id="hero" class="position-relative">
-    <img src="img/conan-cubes.svg" class="position-absolute hero-bg" alt="Conan C++ Package Manager"/>
+    <img src="img/conan-cubes.svg" class="d-none d-md-block position-absolute hero-bg" alt="Conan C++ Package Manager"/>
 
     <a href="#mktoForm_1479" class="btn conan-blue-gradient-bg position-fixed get-involved-btn pl-3 pr-3">Get involved</a>
 
@@ -72,7 +72,7 @@
                                 Downloads
                             </span>
                         </a>
-                        <a href="downloads.html" class="btn conan-blue-border bg-white ml-4" id="get_started_btn_middle">
+                        <a href="downloads.html" class="btn conan-blue-border bg-white ml-lg-4" id="get_started_btn_middle">
                             <span>
                                 Get Started
                             </span>
@@ -88,13 +88,13 @@
 </section>
 
 
-<section id="conan-2-out-now">
-    <div class="container conan-blue-gradient-bg">
-        <div class="row p-2 ">
+<section id="conan-2-out-now" style="border-radius: 0px !important;" class="conan-blue-gradient-bg">
+    <div class="container">
+        <div class="row p-2">
             <div class="col-12 text-center text-white">
-                <h1>Conan 2 Is Out Now</h1>
+                <h1>Conan 2.0 Is Out Now</h1>
                 <div class="d-inline">
-                    <a href="downloads.html" class="btn conan-blue-border bg-white" id="get_started_btn_middle">
+                    <a href="downloads.html" class="btn conan-blue-border bg-white font-weight-bold" id="get_started_btn_middle">
                         <span>
                             What's new in 2.0
                         </span>
@@ -170,7 +170,7 @@
             </div>
 
         </div>
-        <img src="img/conan-single-cube.svg" class="position-absolute" style="right: 0"/>
+        <img src="img/conan-single-cube.svg" class="d-none d-md-block position-absolute" style="right: 0"/>
         <div class="row d-flex py-md-5 align-items-stretch justify-content-center">
             <a href="#" class="learn-more-ce-link">Learn more about Conan</a>
         </div>
