More fixes and improvements

--- a/src/downloads.html
+++ b/src/downloads.html
@@ -29,7 +29,7 @@
   @@include('./templates/header.html')
 
   
-  <section class="downloads-hero position-relative" id="downloadsHero">
+  <section class="downloads-hero position-relative pb-5" id="downloadsHero">
 
     <img src="img/conan-cubes.svg" class="position-absolute hero-bg" alt="Conan C++ Package Manager"/>
 
@@ -41,7 +41,7 @@
       </div>
     </div>
   </section>
-  <section class="pt-0 pb-5" id="downloads">
+  <section class="pt-5 pb-5" id="downloads">
     <div class="container">
       <div class="row pb-3 main-downloads-row ml-auto mr-auto">
         <div class="col-lg-6 blue-downloads colored-downloads">
