--- a/src/index.html
+++ b/src/index.html
@@ -197,13 +197,13 @@
                     to host any kind of source or binary artifact.
                 </p>
                 <div class="d-inline">
-                    <a href="downloads.html" class="btn artifactory-green-gradient-bg"
+                    <a href="downloads.html" class="btn artifactory-green-gradient-bg mt-2"
                        id="artifactory_btn_middle">
                         <span>
                             Download Artifactory CE
                         </span>
                     </a>
-                    <a href="#" class="btn learn-more-link">Learn more about Artifactory CE</a>
+                    <a href="#" class="btn learn-more-link mt-2">Learn more about Artifactory CE</a>
                 </div>
             </div>
         </div>
@@ -237,8 +237,13 @@
 <!-- TRIBE -->
 <section id="homeBanner" class="home-banner text-black">
     <div class="container py-4">
+        <div class="row d-inline d-md-none">
+            <div class="col-12">
+                <img src="./img/tribe-banner.svg" alt="Meet The Tribe">
+            </div>
+        </div>
         <div class="row d-flex justify-content-around">
-            <div class="col-4">
+            <div class="col-4 d-none d-md-inline">
                 <img src="./img/tribe-banner.svg" alt="Meet The Tribe">
             </div>
             <div class="col-5">
@@ -274,7 +279,7 @@
                     </button>
                     <!-- CAROUSEL -->
                     <div class="testis-carousel success-stories">
-                        <div class="testi">
+                        <div class="testi slick-slide slick-current slick-active" >
                             <div class="inner row">
                                 <div class="col-8">
                                     <h5>TomTom Navigation</h5>
@@ -421,6 +426,32 @@
                                     <div class="name text-center">Maikel van den Hurk</div>
                                     <div class="position text-center font-weight-bold">
                                         Principal Software Engineer, TomTom
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="testi">
+                            <div class="inner row">
+                                <div class="col-12">
+                                    <!-- COMPANY LOGO -->
+                                    <div class="text-center company-logo">
+                                        <img src="img/our-users/github.svg" alt="TomTom" class="mx-auto">
+                                    </div>
+                                    <p class="text text-center mx-auto company-quote">
+                                        Conan makes it easier for our many automotive GitHub Enterprise customers
+                                        doing C and C++ programming to establish a continuous delivery pipeline
+                                        that actually deserves that name.
+                                    </p>
+                                    <!-- QUOTE -->
+                                    <div class="quote d-flex align-items-center justify-content-center my-3">
+                                        <span class="line"></span>
+                                        <img class="mx-2" src="img/white-quote.svg" alt="" class="quote-image"/>
+                                        <span class="line"></span>
+                                    </div>
+                                    <div class="name text-center">Johannes Nicolai</div>
+                                    <div class="position text-center font-weight-bold">
+                                        Enterprise Solutions Engineer at GitHub
                                     </div>
                                 </div>
                             </div>
