--- a/src/index.html
+++ b/src/index.html
@@ -67,12 +67,12 @@
                         manager to create and share all your native binaries.
                     </h2>
                     <div class="d-inline">
-                        <a href="downloads.html" class="btn conan-blue-gradient-bg ml-0" id="download_btn_middle">
+                        <a href="downloads.html" class="btn conan-blue-gradient-bg ml-0" id="download_btn_top">
                             <span>
                                 Downloads
                             </span>
                         </a>
-                        <a href="downloads.html" class="btn conan-blue-border bg-white ml-lg-4" id="get_started_btn_middle">
+                        <a href="https://docs.conan.io/en/2.0/tutorial.html" class="btn conan-blue-border bg-white ml-lg-4" id="get_started_btn_top">
                             <span>
                                 Get Started
                             </span>
@@ -94,14 +94,14 @@
             <div class="col-12 text-center text-white">
                 <h1>Conan 2.0 Is Out Now</h1>
                 <div class="d-inline">
-                    <a href="downloads.html" class="btn conan-blue-border bg-white font-weight-bold" id="get_started_btn_middle">
+                    <a href="https://docs.conan.io/en/2.0/whatsnew.html" class="btn conan-blue-border bg-white font-weight-bold" id="whats_new_btn_middle">
                         <span>
                             What's new in 2.0
                         </span>
                     </a>
                 </div>
                 <div class="d-inline">
-                    <a href="downloads.html" class="btn conan-blue-border bg-white" id="get_started_btn_middle">
+                    <a href="https://blog.conan.io/" class="btn conan-blue-border bg-white" id="read_blogpost_btn_middle">
                         <span>
                             Read our blog post
                         </span>
@@ -172,7 +172,7 @@
         </div>
         <img src="img/conan-single-cube.svg" class="d-none d-md-block position-absolute" style="right: 0"/>
         <div class="row d-flex py-md-5 align-items-stretch justify-content-center">
-            <a href="#" class="learn-more-ce-link">Learn more about Conan</a>
+            <a href="https://docs.conan.io/en/2.0/introduction.html" class="learn-more-ce-link" id="learn_more_btn_middle">Learn more about Conan</a>
         </div>
     </div>
 </section>
@@ -203,7 +203,7 @@
                             Download Artifactory CE
                         </span>
                     </a>
-                    <a href="#" class="btn learn-more-link mt-2">Learn more about Artifactory CE</a>
+                    <a href="https://jfrog.com/community/start-free/" class="btn learn-more-link mt-2" id="learnmore_artifactory_btn_middle">Learn more about Artifactory CE</a>
                 </div>
             </div>
         </div>
