Add sparkly images

--- a/src/index.html
+++ b/src/index.html
@@ -88,10 +88,13 @@
 </section>
 
 
-<section id="conan-2-out-now" style="border-radius: 0px !important;" class="conan-blue-gradient-bg">
+<section id="conan-2-out-now" class="conan-blue-to-dark-gradient-bg py-3">
     <div class="container">
-        <div class="row p-2">
-            <div class="col-12 text-center text-white">
+        <div class="row p-2 d-flex justify-content-around">
+            <div class="d-none d-sm-inline">
+                <img src="img/sparks_left.svg">
+            </div>
+            <div class="col-auto text-center text-white">
                 <h1>Conan 2.0 Is Out Now</h1>
                 <div class="d-inline">
                     <a href="https://docs.conan.io/en/2.0/whatsnew.html" class="btn conan-blue-border bg-white font-weight-bold" id="whats_new_btn_middle">
@@ -101,12 +104,15 @@
                     </a>
                 </div>
                 <div class="d-inline">
-                    <a href="https://blog.conan.io/" class="btn conan-blue-border bg-white" id="read_blogpost_btn_middle">
+                    <a href="https://blog.conan.io/" class="btn conan-white-border white" id="read_blogpost_btn_middle">
                         <span>
                             Read our blog post
                         </span>
                     </a>
                 </div>
+            </div>
+            <div class="d-none d-sm-inline">
+                <img src="img/sparks_right.svg">
             </div>
         </div>
     </div>
