--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
 
 <section id="conan-2-out-now" class="conan-blue-to-dark-gradient-bg py-3">
     <div class="container">
-        <div class="row p-2 d-flex justify-content-around">
+        <div class="row p-2 d-flex justify-content-around align-items-center">
             <div class="d-none d-sm-inline">
                 <img src="img/sparks_left.svg">
             </div>
