Address review comments, part 1

--- a/src/downloads.html
+++ b/src/downloads.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
-  <meta content="Download Conan - C/C++ Open Source Package Manager" name="title">
+  <meta content="Download Conan - C and C++ Open Source Package Manager" name="title">
   <meta
-    content="Install the latest version of Conan, the open Source package manager for C/C++, to start using Conan and downloading packages from the ConanCenter"
+    content="Install the latest version of Conan, the open Source package manager for C and C++, to start using Conan and downloading packages from the ConanCenter"
     name="description">
   <link href="favicon.png" rel="shortcut icon" type="image/png" />
   <link href="https://conan.io/downloads.html" hreflang="en" rel="alternate" />
-  <title>C/C++ Open Source Package Manager</title>
+  <title>Conan, C++ Open Source Package Manager</title>
 
   <link rel="canonical" href="https://conan.io/downloads.html" />
 
@@ -49,7 +49,7 @@
             <div class="top bg-blue download-col-topper"></div>
             <div class="content px-2 px-md-4 py-2 p-md-4">
               <div class="small-title d-flex align-items-center"><img
-                  alt="Downlod Conan Open Source C/C++ Package Manager" class="mr-2 small-title-lazy"
+                  alt="Downlod Conan Open Source C and C++ Package Manager" class="mr-2 small-title-lazy"
                   src="img/conan-downloads-logo.svg" style="width:280px"></div>
               <div class="text pb-1">
                 <p class="py-3 front-text">Install the latest version of the free and open Source Conan C and C++
@@ -129,7 +129,7 @@
             <div class="top bg-green download-col-topper"></div>
             <div class="content px-2 px-md-4 py-2 p-md-4">
               <div class="small-title d-flex align-items-center"><img
-                  alt="Downlod JFrog Artifactory Community Edition for C/C++" class="mr-2 lazy"
+                  alt="Downlod JFrog Artifactory Community Edition for C and C++" class="mr-2 lazy"
                   src="img/arti-downloads-logo.svg" style="width:200px;"></div>
               <div class="text pb-1">
                 <p class="py-3 front-text">Download the latest version of JFrog Artifactory Community Edition to host
