--- a/src/faq.html
+++ b/src/faq.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
   <meta
     name="title"
-    content="Frequently Asked Question - Conan C/C++ Open Source Package Manager"
+    content="Frequently Asked Question - Conan C and C++ Open Source Package Manager"
   >
   <meta
     name="description"
@@ -14,7 +14,7 @@
   >
   <link href="favicon.png" rel="shortcut icon" type="image/png" />
   <link href="https://conan.io/faq.html" hreflang="en" rel="alternate" />
-  <title>C/C++ Open Source Package Manager</title>
+  <title>Conan, C and C++ Open Source Package Manager</title>
 
   <link rel="canonical" href="https://conan.io/faq.html" />
 
@@ -81,7 +81,7 @@
         "name": "Can I create my own private repository for hosting Conan packages?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text":"<p>Yes, Conan includes the ability to <a href=https://docs.conan.io/en/latest/introduction.html#decentralized-package-manager>create and host private Conan repositories</a> for sharing packages. JFrog’s “Artifactory” application is the premier enterprise repository hosting platform for Conan packages. Artifactory CE for C/C++ is a free edition, which is designed to provide the C/C++ developer community with the ability to create and host Conan repositories at no cost, and with the benefits of maturity and robustness of the Artifactory server application. JFrog also provides Artifactory hosted as a cloud service which also includes a free tier. Conan repositories can be created and hosted there as well.</p>"}
+          "text":"<p>Yes, Conan includes the ability to <a href=https://docs.conan.io/en/latest/introduction.html#decentralized-package-manager>create and host private Conan repositories</a> for sharing packages. JFrog’s “Artifactory” application is the premier enterprise repository hosting platform for Conan packages. Artifactory CE for C and C++ is a free edition, which is designed to provide the C and C++ developer community with the ability to create and host Conan repositories at no cost, and with the benefits of maturity and robustness of the Artifactory server application. JFrog also provides Artifactory hosted as a cloud service which also includes a free tier. Conan repositories can be created and hosted there as well.</p>"}
         }, {
         "@type": "Question",
         "name": "What platforms can I use Conan with?",
