--- a/src/terms-conditions.html
+++ b/src/terms-conditions.html
@@ -8,15 +8,15 @@
     />
     <meta
       name="title"
-      content="Conan.io - the Open Source C/C++ Package Manager for Developers"
+      content="Conan.io - the Open Source C and C++ Package Manager for Developers"
     />
     <meta
       name="description"
-      content="Conan is an open source, decentralized and multi-platform package manager for C/C++ that allows you to create and share all your native binaries."
+      content="Conan is an open source, decentralized and multi-platform package manager for C and C++ that allows you to create and share all your native binaries."
     />
     <link rel="shortcut icon" type="image/png" href="favicon.png" />
     <link rel="alternate" href="https://conan.io" hreflang="en" />
-    <title>C/C++ Open Source Package Manager</title>
+    <title>Conan, C and C++ Open Source Package Manager</title>
     <link rel="canonical" href="https://conan.io" />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700&display=swap"
