--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
     <!-- META -->
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="title" content="Conan.io - the Open Source C/C++ Package Manager for Developers">
+    <meta name="title" content="Conan.io - the Open Source C and C++ Package Manager for Developers">
     <meta name="description"
-          content="Conan is an open source, decentralized and multi-platform package manager for C/C++ that allows you to create and share all your native binaries.">
+          content="Conan is an open source, decentralized and multi-platform package manager for C and C++ that allows you to create and share all your native binaries.">
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     <link rel="alternate" href="https://conan.io" hreflang="en"/>
-    <title>Conan, software package manager for C/C++ developers</title>
+    <title>Conan, C and C++ Open Source Package Manager</title>
     <link rel="canonical" href="https://conan.io"/>
 
     <!-- FONT -->
@@ -60,7 +60,7 @@
             <div class="col-6">
                 <div class="hero-content py-3">
                     <h1 class="black">
-                        Conan, software package manager for C/C++ developers
+                        Conan, software package manager for C and C++ developers
                     </h1>
                     <h2 class="homepage-hero-paragraph my-3 black">
                         The open source, decentralized and multi-platform package <br class="d-none d-md-inline"/>
@@ -193,10 +193,10 @@
             </div>
             <div class="col-6 text-left diagram-wrapper">
                 <h4 class="font-weight-bold">
-                    Artifactory Community Edition for C/C++
+                    Artifactory Community Edition for C and C++
                 </h4>
                 <p>
-                    Artifactory Community Edition (CE) for C/C++ is the recommended server
+                    Artifactory Community Edition (CE) for C and C++ is the recommended server
                     for development and hosting private packages for a team or company.
                     It is completely free, and it features a WebUI, advanced authentication and permissions,
                     great performance and scalability, a REST API, a generic CLI tool and generic repositories
@@ -209,7 +209,6 @@
                             Download Artifactory CE
                         </span>
                     </a>
-                    <a href="https://jfrog.com/community/start-free/" class="btn learn-more-link mt-2" id="learnmore_artifactory_btn_middle">Learn more about Artifactory CE</a>
                 </div>
             </div>
         </div>
@@ -219,7 +218,7 @@
             </div>
             <div class="col-6 text-left diagram-wrapper">
                 <h4 class="font-weight-bold">
-                    ConanCenter, the place to find and share popular C/C++ Conan packages
+                    ConanCenter, the place to find and share popular C and C++ Conan packages
                 </h4>
                 <p>
                     ConanCenter is the central repository where you can search and discover all the available
@@ -255,7 +254,7 @@
             <div class="col-5">
                 <h2 class="text-uppercase text-center text-lg-left">Meet the CONAN 2.0&nbsp;TRIBE</h2>
                 <p class="mb-0 pb-3 text-center text-lg-left">
-                    A group of more than 70 Conan expert users and contributors helping to define the next Conan 2.0 major version.
+                    A group of more than 70 Conan expert users and contributors that helped to define Conan 2.0.
                 </p>
                 <a href="tribe.html" class="btn conan-blue-gradient-bg">
                     Learn more
@@ -581,8 +580,8 @@
                                 <p class="text text-center company-quote mx-auto">
                                     Conan has amplified our productivity, by minimizing the
                                     build times and implement full fled CI features for our
-                                    C/C++ development. Its the true dependency manager for
-                                    C/C++
+                                    C and C++ development. Its the true dependency manager for
+                                    C and C++
                                 </p>
                                 <!-- QUOTE -->
                                 <div class="quote d-flex align-items-center justify-content-center my-3">
@@ -666,7 +665,7 @@
                                     try, and it worked! It does not matter how the libraries
                                     we depend on are built or provided (CMake, autotools,
                                     pre-compiled binaries). Conan gives us the flexibility to
-                                    manage C/C++ libraries of all kinds. We have Conan fully
+                                    manage C and C++ libraries of all kinds. We have Conan fully
                                     integrated in our CI system and we do pretty advanced
                                     things with it. It definitely made our life easier.
                                 </p>
@@ -721,7 +720,7 @@
                                 <!-- TEXT -->
                                 <p class="text text-center company-quote mx-auto">
                                     Conan is the best solution for external dependencies in
-                                    C/C++ projects. It linked C++ and DevOps by applying a
+                                    C and C++ projects. It linked C++ and DevOps by applying a
                                     common language for building, packaging, and distributing
                                     our artifacts to any platform and architecture.
                                 </p>
@@ -748,7 +747,7 @@
                                 <p class="text text-center company-quote mx-auto">
                                     Conan has been a lifesaver in managing cross-platform
                                     packages for Imageflow. It's flexible, addresses the hard
-                                    problems of C/C++ package management head-on, and is
+                                    problems of C and C++ package management head-on, and is
                                     backed by a fantastic set of developers. Don't waste your
                                     time with alternatives; this is the real deal.
                                 </p>
